--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-graphql": "^0.12.0",
+    "graphql": "^15.8.0",
     "mongoose": "^7.2.1",
     "nodemon": "^2.0.22",
     "socket.io": "^4.6.2"
