--- a/public/package.json
+++ b/public/package.json
@@ -9,9 +9,12 @@
     "axios": "^1.4.0",
     "buffer": "^6.0.3",
     "emoji-picker-react": "^4.4.9",
+    "graphql": "^16.6.0",
+    "graphql-request": "^6.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
